cmake_minimum_required(VERSION 3.22...3.27)

project(loving_babbar_dsa VERSION 1.0.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(EXE_ARRAY_1 array_exe_1)
set(EXE_ARRAY_2 array_exe_2)
set(EXE_ARRAY_3 array_exe_3)
set(EXE_ARRAY_4 array_exe_4)
set(EXE_ARRAY_5 array_exe_5)
set(EXE_ARRAY_6 array_exe_6)
set(EXE_ARRAY_7 array_exe_7)
set(EXE_ARRAY_8 array_exe_8)
set(EXE_ARRAY_9 array_exe_9)
set(EXE_ARRAY_10 array_exe_10)

add_subdirectory(arrays)