cmake_minimum_required(VERSION 3.22...3.27)

project(loving_babbar_dsa VERSION 1.0.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(EXE_ARRAY_1 array_exe_1)
set(EXE_ARRAY_2 array_exe_2)
set(EXE_ARRAY_3 array_exe_3)
set(EXE_ARRAY_4 array_exe_4)
set(EXE_ARRAY_5 array_exe_5)
set(EXE_ARRAY_6 array_exe_6)
set(EXE_ARRAY_7 array_exe_7)
set(EXE_ARRAY_8 array_exe_8)
set(EXE_ARRAY_9 array_exe_9)
set(EXE_ARRAY_10 array_exe_10)
set(EXE_ARRAY_11 array_exe_11)
set(EXE_ARRAY_12 array_exe_12)
set(EXE_ARRAY_13 array_exe_13)
set(EXE_ARRAY_14 array_exe_14)
set(EXE_ARRAY_15 array_exe_15)
set(EXE_ARRAY_16 array_exe_16)
set(EXE_ARRAY_17 array_exe_17)
set(EXE_ARRAY_18 array_exe_18)
set(EXE_ARRAY_19 array_exe_19)
set(EXE_ARRAY_20 array_exe_20)
set(EXE_ARRAY_21 array_exe_21)
set(EXE_ARRAY_22 array_exe_22)
set(EXE_ARRAY_23 array_exe_23)
set(EXE_ARRAY_24 array_exe_24)
set(EXE_ARRAY_25 array_exe_25)
set(EXE_ARRAY_26 array_exe_26)
set(EXE_ARRAY_27 array_exe_27)
set(EXE_ARRAY_28 array_exe_28)
set(EXE_ARRAY_29 array_exe_29)
set(EXE_ARRAY_30 array_exe_30)
set(EXE_ARRAY_31 array_exe_31)
set(EXE_ARRAY_32 array_exe_32)
set(EXE_ARRAY_33 array_exe_33)
set(EXE_ARRAY_34 array_exe_34)
set(EXE_ARRAY_35 array_exe_35)
set(EXE_ARRAY_36 array_exe_36)
set(EXE_ARRAY_37 array_exe_37)

add_subdirectory(arrays)