set(EXE_SOURCES_1
    reverse_array.cpp)

set(EXE_SOURCES_2
    get_min_max.cpp)

set(EXE_SOURCES_3
    k_th_smallest.cpp)

set(EXE_SOURCES_4
    sort_012.cpp)

set(EXE_SOURCES_5
    neg_pos_partition.cpp)

set(EXE_SOURCES_6
    union_intersection.cpp)

set(EXE_SOURCES_7
    rotate_array.cpp)

set(EXE_SOURCES_8
    max_subarray_sum.cpp)

set(EXE_SOURCES_9
    minimize_max_heights.cpp)

set(EXE_SOURCES_10
    min_jumps_to_the_end.cpp)

add_executable(${EXE_ARRAY_1} ${EXE_SOURCES_1})
add_executable(${EXE_ARRAY_2} ${EXE_SOURCES_2})
add_executable(${EXE_ARRAY_3} ${EXE_SOURCES_3})
add_executable(${EXE_ARRAY_4} ${EXE_SOURCES_4})
add_executable(${EXE_ARRAY_5} ${EXE_SOURCES_5})
add_executable(${EXE_ARRAY_6} ${EXE_SOURCES_6})
add_executable(${EXE_ARRAY_7} ${EXE_SOURCES_7})
add_executable(${EXE_ARRAY_8} ${EXE_SOURCES_8})
add_executable(${EXE_ARRAY_9} ${EXE_SOURCES_9})
add_executable(${EXE_ARRAY_10} ${EXE_SOURCES_10})