set(EXE_SOURCES_1
    reverse_array.cpp)

set(EXE_SOURCES_2
    get_min_max.cpp)

set(EXE_SOURCES_3
    k_th_smallest.cpp)

set(EXE_SOURCES_4
    sort_012.cpp)

set(EXE_SOURCES_5
    neg_pos_partition.cpp)

set(EXE_SOURCES_6
    union_intersection.cpp)

set(EXE_SOURCES_7
    rotate_array.cpp)

set(EXE_SOURCES_8
    max_subarray_sum.cpp)

set(EXE_SOURCES_9
    minimize_max_heights.cpp)

set(EXE_SOURCES_10
    min_jumps_to_the_end.cpp)

set(EXE_SOURCES_11
    min_max_diff_heights.cpp)

set(EXE_SOURCES_12
    find_duplicates.cpp)

set(EXE_SOURCES_13
    merge_two_arrays.cpp)

set(EXE_SOURCES_14
    merging_intervals.cpp)

set(EXE_SOURCES_15
    next_permutation.cpp)

set(EXE_SOURCES_16
    count_inversion.cpp)

set(EXE_SOURCES_17
    max_profit.cpp)

set(EXE_SOURCES_18
    count_pairs_given_sum.cpp)

set(EXE_SOURCES_19
    common_elements_three_arrays.cpp)

set(EXE_SOURCES_20
    alternate_neg_pos_no_extra_space.cpp)

set(EXE_SOURCES_21
    subarray_with_zero_sum.cpp)

set(EXE_SOURCES_22
    big_factorial.cpp)

set(EXE_SOURCES_23
    max_product_subarray.cpp)

set(EXE_SOURCES_24
    longest_consecutive_subsequence.cpp)

set(EXE_SOURCES_25
    appears_more_than_n_by_k.cpp)

set(EXE_SOURCES_26
    max_profit_buy_at_most_twice.cpp)

set(EXE_SOURCES_27
    array_subset_of_another.cpp)

set(EXE_SOURCES_28
    array_triplet_sum.cpp)

set(EXE_SOURCES_29
    trapping_water.cpp)

set(EXE_SOURCES_30
    chocolate_distribution.cpp)

set(EXE_SOURCES_31
    smallest_subarray_sum_greatest_than_value.cpp)

set(EXE_SOURCES_32
    three_way_partitioning_array.cpp)

set(EXE_SOURCES_33
    min_swaps_all_less_than_k.cpp)

set(EXE_SOURCES_34
    are_all_palindromes.cpp)

set(EXE_SOURCES_35
    median_same_size_arrays.cpp)

set(EXE_SOURCES_36
    median_different_size_arrays.cpp)

set(EXE_SOURCES_37
    min_moves_to_make_palindrome.cpp)

add_executable(${EXE_ARRAY_1} ${EXE_SOURCES_1})
add_executable(${EXE_ARRAY_2} ${EXE_SOURCES_2})
add_executable(${EXE_ARRAY_3} ${EXE_SOURCES_3})
add_executable(${EXE_ARRAY_4} ${EXE_SOURCES_4})
add_executable(${EXE_ARRAY_5} ${EXE_SOURCES_5})
add_executable(${EXE_ARRAY_6} ${EXE_SOURCES_6})
add_executable(${EXE_ARRAY_7} ${EXE_SOURCES_7})
add_executable(${EXE_ARRAY_8} ${EXE_SOURCES_8})
add_executable(${EXE_ARRAY_9} ${EXE_SOURCES_9})
add_executable(${EXE_ARRAY_10} ${EXE_SOURCES_10})
add_executable(${EXE_ARRAY_11} ${EXE_SOURCES_11})
add_executable(${EXE_ARRAY_12} ${EXE_SOURCES_12})
add_executable(${EXE_ARRAY_13} ${EXE_SOURCES_13})
add_executable(${EXE_ARRAY_14} ${EXE_SOURCES_14})
add_executable(${EXE_ARRAY_15} ${EXE_SOURCES_15})
add_executable(${EXE_ARRAY_16} ${EXE_SOURCES_16})
add_executable(${EXE_ARRAY_17} ${EXE_SOURCES_17})
add_executable(${EXE_ARRAY_18} ${EXE_SOURCES_18})
add_executable(${EXE_ARRAY_19} ${EXE_SOURCES_19})
add_executable(${EXE_ARRAY_20} ${EXE_SOURCES_20})
add_executable(${EXE_ARRAY_21} ${EXE_SOURCES_21})
add_executable(${EXE_ARRAY_22} ${EXE_SOURCES_22})
add_executable(${EXE_ARRAY_23} ${EXE_SOURCES_23})
add_executable(${EXE_ARRAY_24} ${EXE_SOURCES_24})
add_executable(${EXE_ARRAY_25} ${EXE_SOURCES_25})
add_executable(${EXE_ARRAY_26} ${EXE_SOURCES_26})
add_executable(${EXE_ARRAY_27} ${EXE_SOURCES_27})
add_executable(${EXE_ARRAY_28} ${EXE_SOURCES_28})
add_executable(${EXE_ARRAY_29} ${EXE_SOURCES_29})
add_executable(${EXE_ARRAY_30} ${EXE_SOURCES_30})
add_executable(${EXE_ARRAY_31} ${EXE_SOURCES_31})
add_executable(${EXE_ARRAY_32} ${EXE_SOURCES_32})
add_executable(${EXE_ARRAY_33} ${EXE_SOURCES_33})
add_executable(${EXE_ARRAY_34} ${EXE_SOURCES_34})
add_executable(${EXE_ARRAY_35} ${EXE_SOURCES_35})
add_executable(${EXE_ARRAY_36} ${EXE_SOURCES_36})
add_executable(${EXE_ARRAY_37} ${EXE_SOURCES_37})